test/conformance/kuttl/mutate/clusterpolicy/standard/except-from-mutate/01-manifests.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-labels
spec:
  rules:
    - name: add-labels
      match:
        resources:
          kinds:
            - Pod
            - Service
            - ConfigMap
            - Secret
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              foo: bar
