test/conformance/kuttl/mutate/clusterpolicy/standard/except-from-mutate/policyexception.yaml
apiVersion: kyverno.io/v2beta1
kind: PolicyException
metadata:
  name: bypass-secret
  namespace: kyverno
spec:
  exceptions:
    - policyName: add-labels
      ruleNames:
        - add-labels
  exclude:
    any:
      - resources:
          kinds:
            - Secret
          names:
            - testingsecret
