test/conformance/kuttl/mutate/clusterpolicy/standard/except-from-mutate/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-labels
status:
  conditions:
    - reason: Succeeded
      status: "True"
      type: Ready
