test/conformance/kuttl/mutate/clusterpolicy/standard/except-from-mutate/03-assert.yaml
apiVersion: v1
kind: Secret
metadata:
  name: testingsecret
  labels:
    foo: foo
